changed complaint box, location, and style.
Changed the message box text for complaint box. 
Added "Ground Floor" in location drop down.
Removed "Fusion" style for the software. Now the app uses default style.

--- a/add_loc.ui
+++ b/add_loc.ui
@@ -89,6 +89,11 @@
        </item>
        <item>
         <property name="text">
+         <string>Ground Floor</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
          <string>1st Floor</string>
         </property>
        </item>
