--- a/add_pbt.ui
+++ b/add_pbt.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>390</width>
-    <height>161</height>
+    <height>194</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,7 +22,7 @@
      <x>10</x>
      <y>10</y>
      <width>371</width>
-     <height>141</height>
+     <height>171</height>
     </rect>
    </property>
    <property name="title">
@@ -34,7 +34,7 @@
       <x>9</x>
       <y>30</y>
       <width>351</width>
-      <height>111</height>
+      <height>141</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="formLayout">
@@ -60,7 +60,7 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
+     <item row="4" column="0">
       <widget class="QCheckBox" name="pbt_active">
        <property name="font">
         <font>
@@ -75,18 +75,34 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="0" colspan="2">
+     <item row="5" column="0" colspan="2">
       <widget class="QPushButton" name="pbt_save_btn">
        <property name="text">
         <string>Save</string>
        </property>
       </widget>
      </item>
-     <item row="5" column="0" colspan="2">
+     <item row="6" column="0" colspan="2">
       <widget class="QPushButton" name="pbt_reset_btn">
        <property name="text">
         <string>Reset</string>
        </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Hardware</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QComboBox" name="hwt_combo">
+       <item>
+        <property name="text">
+         <string>-- Select --</string>
+        </property>
+       </item>
       </widget>
      </item>
     </layout>
