--- a/edit_loc_box.ui
+++ b/edit_loc_box.ui
@@ -67,6 +67,11 @@
        </item>
        <item>
         <property name="text">
+         <string>Ground Floor</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
          <string>1st Floor</string>
         </property>
        </item>
