--- a/manual.ui
+++ b/manual.ui
@@ -47,61 +47,29 @@ Login
 The user should enter their login credentials to access the software.
 Depending on the privileges, the user will be directed to a screen.
 
-Menu
+Ribbon Bar
 
-The HSM menu bar has three tabs - Master, Operations, and Help.
+The HSM ribbon bar has four tabs - Add, Edit, Tasks and Help.
 
-Master
+Add
+	Buttons for adding
+	User, Location, Hardware, Brand, and Problem
 
-User =&gt; Add
-	Adding a new user
+Edit
+	Buttons for editing
+	User, Location, Hardware, Brand, Problem
+	and Resetting password
 
-User =&gt; Edit
-	Editing new user data 
+Tasks
 
-User =&gt; Reset Password (Ctrl+P)
-	Changing the password
-
-Location =&gt; Add
-	Adding a new location
-
-Location =&gt; Edit
-	Editing new location data 
-
-Hardware =&gt; Add
-	Adding a new hardware 
-
-Hardware =&gt; Edit
-	Editing new hardware data 
-
-Brand =&gt; Add
-	Adding a new brand 
-
-Brand =&gt; Edit
-	Editing new brand data
-
-Problem =&gt; Add
-	Adding a new problem 
-
-Problem =&gt; Edit
-	Editing new problem data
-
-Log Out (Alt+L)
-	Closes the session
-
-Close
-	Closes the application
-
-Operations
-
-Generate Report (Shortcut - Ctrl+G)
+Generate Report
 	A popup will appear which asks for the file name,
 	folder, start date and end date. After clicking on
 	&quot;Export&quot;, a .csv file will be generated in the 
 	mentioned file location. 	
 	&quot;Reset&quot; button clears the details entered.
 
-Complaint (Shortcut - Ctrl+C)
+Complaint 
 
 	&quot;Ticked ID&quot; 
 		It is an auto-generated field.
@@ -123,7 +91,7 @@ Complaint (Shortcut - Ctrl+C)
 		The name of the administrator 
 		with whom the client spoke.
 
-	Caller Name (Optional Field)
+	Caller Name
 		Name of the client
 
 	Remarks (Optional Field)
@@ -137,26 +105,26 @@ Complaint (Shortcut - Ctrl+C)
 	Reset
 		Resets the data.
 
-Refresh Log (Shortcut - Ctrl+R)
+Refresh Log
 	Refreshes the &quot;Pending Log&quot; i.e. 
 	the log on the window.
 
-Full Log (Shortcut - Ctrl+F)
+Full Log 
 	Dsiplays all the complaints.
 
-Completed Log (Shortcut - Ctrl+D)
+Completed Log 
 	Dsiplays the solved issues.
 
 
 Help
 
-About (Ctrl+A)
+About 
 	Brief information about the software
 
-License (Ctrl+L)
+License 
 	License of the software 
 
-Manual (Ctrl+M)
+Manual 
 	The document that you are currently reading
 
 Toolbar
