--- a/window.ui
+++ b/window.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>1132</width>
     <height>600</height>
    </rect>
   </property>
@@ -419,13 +419,16 @@ QToolButton:checked{
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>report.ico</normaloff>report.ico</iconset>
+        <normaloff>export.ico</normaloff>export.ico</iconset>
       </property>
       <property name="iconSize">
        <size>
         <width>50</width>
         <height>50</height>
        </size>
+      </property>
+      <property name="shortcut">
+       <string>Ctrl+E</string>
       </property>
       <property name="toolButtonStyle">
        <enum>Qt::ToolButtonTextUnderIcon</enum>
@@ -453,6 +456,9 @@ QToolButton:checked{
         <height>50</height>
        </size>
       </property>
+      <property name="shortcut">
+       <string>Ctrl+F</string>
+      </property>
       <property name="toolButtonStyle">
        <enum>Qt::ToolButtonTextUnderIcon</enum>
       </property>
@@ -478,6 +484,9 @@ QToolButton:checked{
         <width>50</width>
         <height>50</height>
        </size>
+      </property>
+      <property name="shortcut">
+       <string>Ctrl+L</string>
       </property>
       <property name="toolButtonStyle">
        <enum>Qt::ToolButtonTextUnderIcon</enum>
@@ -505,6 +514,9 @@ QToolButton:checked{
         <height>50</height>
        </size>
       </property>
+      <property name="shortcut">
+       <string>Ctrl+T</string>
+      </property>
       <property name="toolButtonStyle">
        <enum>Qt::ToolButtonTextUnderIcon</enum>
       </property>
@@ -531,6 +543,9 @@ QToolButton:checked{
         <height>50</height>
        </size>
       </property>
+      <property name="shortcut">
+       <string>Ctrl+R</string>
+      </property>
       <property name="toolButtonStyle">
        <enum>Qt::ToolButtonTextUnderIcon</enum>
       </property>
@@ -556,6 +571,9 @@ QToolButton:checked{
         <width>50</width>
         <height>50</height>
        </size>
+      </property>
+      <property name="shortcut">
+       <string>Ctrl+C</string>
       </property>
       <property name="toolButtonStyle">
        <enum>Qt::ToolButtonTextUnderIcon</enum>
@@ -716,6 +734,11 @@ QToolButton:checked{
     <column>
      <property name="text">
       <string>Remark</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Solution</string>
      </property>
     </column>
    </widget>
