--- a/complaint.ui
+++ b/complaint.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>692</width>
-    <height>301</height>
+    <width>931</width>
+    <height>400</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,8 +21,8 @@
     <rect>
      <x>10</x>
      <y>20</y>
-     <width>671</width>
-     <height>271</height>
+     <width>911</width>
+     <height>371</height>
     </rect>
    </property>
    <property name="title">
@@ -33,11 +33,24 @@
      <rect>
       <x>10</x>
       <y>30</y>
-      <width>651</width>
-      <height>235</height>
+      <width>891</width>
+      <height>331</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
+     <item row="1" column="2">
+      <spacer name="horizontalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
      <item row="0" column="0">
       <widget class="QLabel" name="ticket_label">
        <property name="text">
@@ -59,45 +72,6 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="2">
-      <spacer name="horizontalSpacer_3">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="0" column="5">
-      <spacer name="horizontalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="1" column="5">
-      <spacer name="horizontalSpacer_4">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
      <item row="0" column="3">
       <widget class="QLabel" name="hwl">
        <property name="text">
@@ -118,54 +92,6 @@
        </property>
       </spacer>
      </item>
-     <item row="0" column="7">
-      <widget class="QComboBox" name="pbt_combo">
-       <property name="font">
-        <font>
-         <pointsize>8</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true"/>
-       </property>
-       <item>
-        <property name="text">
-         <string>-- Select --</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="0" column="4">
-      <widget class="QComboBox" name="hwt_combo">
-       <property name="font">
-        <font>
-         <pointsize>8</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true"/>
-       </property>
-       <item>
-        <property name="text">
-         <string>-- Select --</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="5" column="6" colspan="2">
-      <widget class="QPushButton" name="save_details">
-       <property name="text">
-        <string>Save</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1" colspan="7">
-      <widget class="QTextEdit" name="remark">
-       <property name="placeholderText">
-        <string>(Optional)</string>
-       </property>
-      </widget>
-     </item>
      <item row="3" column="0">
       <widget class="QLabel" name="name_label">
        <property name="text">
@@ -173,24 +99,10 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="1" colspan="7">
-      <widget class="QLineEdit" name="opt_name">
-       <property name="placeholderText">
-        <string/>
-       </property>
-      </widget>
-     </item>
      <item row="4" column="0">
       <widget class="QLabel" name="rmk_label">
        <property name="text">
         <string>Remarks</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="6">
-      <widget class="QLabel" name="pbl">
-       <property name="text">
-        <string>Problem</string>
        </property>
       </widget>
      </item>
@@ -213,8 +125,55 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="4">
-      <widget class="QComboBox" name="loc_combo">
+     <item row="1" column="8">
+      <widget class="QLabel" name="admin_label">
+       <property name="text">
+        <string>Spoken To</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="7">
+      <spacer name="horizontalSpacer_4">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="7" column="9">
+      <spacer name="horizontalSpacer_5">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="3" column="1" colspan="10">
+      <widget class="QLineEdit" name="opt_name">
+       <property name="placeholderText">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0" colspan="2">
+      <widget class="QPushButton" name="save_details">
+       <property name="text">
+        <string>Save</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="9" colspan="2">
+      <widget class="QComboBox" name="ad_combo">
        <property name="font">
         <font>
          <pointsize>8</pointsize>
@@ -230,22 +189,115 @@
        </item>
       </widget>
      </item>
-     <item row="6" column="6" colspan="2">
+     <item row="4" column="1" colspan="10">
+      <widget class="QTextEdit" name="remark">
+       <property name="placeholderText">
+        <string>(Optional)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="10">
+      <spacer name="horizontalSpacer_6">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="0" column="9" colspan="2">
+      <widget class="QComboBox" name="pbt_combo">
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <item>
+        <property name="text">
+         <string>-- Select --</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="8" column="0" colspan="2">
       <widget class="QPushButton" name="reset_details">
        <property name="text">
         <string>Reset</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="6">
-      <widget class="QLabel" name="admin_label">
+     <item row="0" column="8">
+      <widget class="QLabel" name="pbl">
        <property name="text">
-        <string>Spoken To</string>
+        <string>Problem</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="7">
-      <widget class="QComboBox" name="ad_combo">
+     <item row="0" column="7">
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="6" column="0">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="6" column="6">
+      <spacer name="horizontalSpacer_7">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="0" column="4" colspan="3">
+      <widget class="QComboBox" name="hwt_combo">
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <item>
+        <property name="text">
+         <string>-- Select --</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="1" column="4" colspan="3">
+      <widget class="QComboBox" name="loc_combo">
        <property name="font">
         <font>
          <pointsize>8</pointsize>
