--- a/info.ui
+++ b/info.ui
@@ -71,7 +71,7 @@
     <item row="3" column="0">
      <widget class="QLabel" name="label_4">
       <property name="text">
-       <string>Assigned To</string>
+       <string>Spoken To</string>
       </property>
      </widget>
     </item>
