--- a/ticket.ui
+++ b/ticket.ui
@@ -38,17 +38,7 @@
      </rect>
     </property>
     <layout class="QFormLayout" name="formLayout">
-     <item row="0" column="0">
-      <widget class="QCheckBox" name="pending">
-       <property name="text">
-        <string>Is It Pending?</string>
-       </property>
-       <property name="checked">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0" colspan="2">
+     <item row="1" column="0" colspan="2">
       <widget class="QPlainTextEdit" name="solution">
        <property name="sizeAdjustPolicy">
         <enum>QAbstractScrollArea::AdjustToContents</enum>
@@ -58,11 +48,42 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="0" colspan="2">
+     <item row="2" column="0" colspan="2">
       <widget class="QPushButton" name="save_btn">
        <property name="text">
         <string>Save</string>
        </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Status</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QComboBox" name="status">
+       <item>
+        <property name="text">
+         <string>-- Select --</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Pending</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Completed</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Sent Out For Repair</string>
+        </property>
+       </item>
       </widget>
      </item>
     </layout>
